[gd_scene load_steps=6 format=3 uid="uid://dlub32bnd7c6c"]

[ext_resource type="Script" path="res://Object.gd" id="1"]

[sub_resource type="RectangleShape2D" id="1"]
size = Vector2(14.2974, 15.2071)

[sub_resource type="CircleShape2D" id="2"]
radius = 12.8

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_q8k3u"]
bg_color = Color(0.313726, 0.313726, 0.313726, 1)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_2bb7e"]
bg_color = Color(0.266667, 0.639216, 0.25098, 1)

[node name="Object" type="StaticBody2D"]
collision_layer = 2
collision_mask = 4
script = ExtResource("1")

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
light_mask = 8
position = Vector2(7.14869, 7.60357)
shape = SubResource("1")

[node name="ColorRect" type="ColorRect" parent="."]
offset_right = 32.0
offset_bottom = 32.0
scale = Vector2(0.5, 0.5)
color = Color(0.470588, 0.509804, 0.835294, 1)

[node name="Area2D" type="Area2D" parent="."]
position = Vector2(7.15, 7.6)
scale = Vector2(1.25, 1.25)
collision_layer = 2
collision_mask = 4

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area2D"]
shape = SubResource("2")

[node name="ProgressBar" type="ProgressBar" parent="."]
offset_left = -4.0
offset_top = -8.0
offset_right = 96.0
offset_bottom = 22.0
scale = Vector2(0.23, 0.122)
theme_override_styles/background = SubResource("StyleBoxFlat_q8k3u")
theme_override_styles/fill = SubResource("StyleBoxFlat_2bb7e")
max_value = 5.0
step = 1.0
show_percentage = false

[connection signal="mouse_entered" from="." to="." method="_on_Object_mouse_entered"]
[connection signal="body_entered" from="Area2D" to="." method="_on_Area2D_body_entered"]
[connection signal="body_exited" from="Area2D" to="." method="_on_Area2D_body_exited"]
